# FindScoreP

./: .gitignore  CMakeLists.txt  README.md
docs/: AUTODETECT.md  FINDMODULE.md  UTILITIES.md
examples/cuda/: CMakeLists.txt  fibonacci.cu
examples/cuda/tests/: CMakeLists.txt  check_no_results.cmake  check_results.cmake
examples/kokkos/: CMakeLists.txt  fibonacci.cpp
examples/kokkos/tests/: CMakeLists.txt  check_no_results.cmake
examples/openacc/: CMakeLists.txt  fibonacci.cpp
examples/openacc/tests/: CMakeLists.txt
examples/openmp/: CMakeLists.txt  fibonacci.cpp
examples/openmp/tests/: CMakeLists.txt
examples/pthread/: CMakeLists.txt  fibonacci.cpp
examples/pthread/tests/: CMakeLists.txt
examples/user instrumentation/: CMakeLists.txt  fibonacci.cpp
examples/user instrumentation/tests/: CMakeLists.txt  check_results.cmake
paper/: README.md  Score-P Control via Cmake.tex  presentation.pptx  references.bib  zihpub.cls
paper/BenchmarkProject/: CMakeLists.txt  generate_csv.py  runtime_0.csv  runtime_100.csv  runtime_25.csv  runtime_50.csv  runtime_75.csv  runtime_auto.csv  runtime_noauto.csv
paper/patches/: high-level.patch
src/: CMakeLists.txt  FindScoreP.cmake  ScorePUtilities.cmake
src/ScorePUtilities/: analysis.cmake  properties.cmake  settings.cmake  targets.cmake
tests/: CMakeLists.txt  find_components.cmake  find_scorep.cmake  include_script.cmake  merge_arguments.cmake  merge_arguments_conflict.cmake  merge_arguments_propagated_conflict.cmake  unionfind.cmake  utils.cmake
tests/TestAliasTargets/: CMakeLists.txt
tests/TestAuto/: CMakeLists.txt
tests/TestComponents/: find_components.cmake
tests/TestDependencies/: CMakeLists.txt
tests/TestDeterminedInstrumentations/: CMakeLists.txt
tests/TestListTargets/: CMakeLists.txt
tests/TestListTargets/subdir/: CMakeLists.txt
tests/TestMultipleVersions/: find_multiple.cmake  find_range.cmake
tests/TestMultipleVersions/0.0.0.2/: scorep-config
tests/TestMultipleVersions/0.0.0.3/: scorep-config
tests/TestResultVariables/: CMakeLists.txt
tests/TestTryCompile/: CMakeLists.txt  hello.c
